modules/core/client/css/core.css
html, body {
  height: 100%;
}
body {
  padding-top: 50px;
  overflow: hidden;
}

.content {
  /*margin-top: 50px;*/
  height: 100%;
}
.undecorated-link:hover {
  text-decoration: none;
}
[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none !important;
}
.ng-invalid.ng-dirty {
  border-color: #FA787E;
}
.ng-valid.ng-dirty {
  border-color: #78FA89;
}
.header-profile-image {
  opacity: 0.8;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  margin-right: 5px;
}
.open .header-profile-image,
a:hover .header-profile-image {
  opacity: 1;
}
.user-header-dropdown-toggle {
  padding-top: 11px !important;
  padding-bottom: 11px !important;
}


.disable-animations.ng-enter,
.disable-animations.ng-leave,
.disable-animations.ng-animate {
  -webkit-transition: none !important;
  transition: none !important;
}

/* Use this for keyframe animations */
.disable-animations.ng-animate {
  -webkit-animation: none 0s;
  animation: none 0s;
}

.uploader {
  position: relative;
  /*pointer-events: none;*/
}
.uploader-contents {
  position: absolute;
  top: 0;
  /*right: 0;*/
  pointer-events: none;
  min-width: 200px;
}

.uploader-contents:before {
  content: " ";
  background: #fff;
  width: 98px;
  height: 30px;
  display: block;
  position: absolute;
  left: -100px;
}

.uploader input {
  cursor: pointer;
  padding: 7px 86px 7px 0;
  position: relative;
}
.uploader input:focus {
  outline: 0;
}

